# BookEasyAI

./: .gitignore  DockerFile  Dockerfile  README.md  main.py  pyproject.toml
backend/: main.py
backend/config/: setting.py
backend/routes/: chat.py
backend/services/: agent.py  calender_services.py
frontend/: app.py  requirements.txt
